--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,11 +4,12 @@
 @import "./blocks/page";
 @import "./blocks/header";
 @import "./blocks/grafic";
-@import "./blocks/logo";
+@import "./blocks/museum";
 @import "./blocks/tickets";
 @import "./blocks/menu";
 @import "./blocks/events";
 @import "./blocks/article";
+@import "./blocks/romantic";
 @import "./blocks/gallery";
 @import "./blocks/subscription";
 @import "./blocks/form";
