--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,35 +1,95 @@
 .contacts {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
+  @include paddingInline;
+
+  @include gridPage;
   row-gap: 40px;
-  padding-inline: 20px;
+
+  @include onTablet {
+    row-gap: 64px;
+  }
 
   &__top {
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include onTablet {
+      display: block;
+      grid-column: 1 / 2;
+    }
+  }
+
+  &__logo {
+    box-sizing: border-box;
+    height: 72px;
+    padding: 5px 3px;
+
+    @include onTablet {
+      margin-bottom: 62px;
+    }
   }
 
   &__social {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+
+    @include onTablet {
+      display: flex;
+      gap: 32px;
+    }
+
+    @include onDesktop {
+       gap: 0;
+      justify-content: space-between;
+    }
   }
 
   &__wrapper {
     position: relative;
     grid-column: 1 / -1;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 20px;
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
+    color: $c-title;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+      grid-row: 1 / 2;
+    }
+
+    @include onDesktop {
+      grid-column: 3 / 7;
+      grid-row: 1 / 2;
+      column-gap: 30px;
+      border-bottom: none;
+
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: -65px;
+        height: 100%;
+        width: 1px;
+        background-color: rgba(26, 90, 76, 0.5);
+      }
+
+    }
   }
 
   &__grafic {
     grid-column: 1 / 2;
     padding-bottom: 70px;
+
+    @include onTablet {
+      padding-bottom: 64px;
+    }
+
+    @include onDesktop {
+      padding-bottom: 0;
+    }
   }
 
   &__contact {
@@ -37,29 +97,43 @@
   }
 
   &__text {
-    line-height: 140.63%;
     margin-bottom: 20px;
+    font-size: 14px;
     font-weight: 400;
+    line-height: 140.63%;
+    color: inherit;
   }
 
   &__adress {
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
+    color: inherit;
   }
 
   &__menu {
     grid-column: 1 / -1;
+
+    @include onTablet {
+      grid-column: 2 / -2;
+    }
+
+    @include onDesktop {
+      grid-column: 8 / -2;
+    }
   }
 
   &__list {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     padding: 0;
     margin: 0;
     list-style: none;
+
+    @include onDesktop {
+      column-gap: 30px;
+    }
   }
 
   &__item {
@@ -67,12 +141,26 @@
   }
 
   &__link {
+    position: relative;
     font-size: 14px;
     font-weight: 400;
     text-decoration: none;
     color: $c-title;
 
-    @include hover(border-bottom, 1px solid #FFF);
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 0;
+      height: 1px;
+      background-color: #000;
+      transition: width .3s;
+    }
+
+    &:hover:after {
+      width: 100%;
+    }
   }
 
   &__arrow {
@@ -84,5 +172,15 @@
     border: 1px solid $c-green;
     border-radius: 50%;
     background: url(../images/icons/arrow-up.svg) center no-repeat;
+
+    @include hover(scale, 1.1);
+
+    @include onTablet{
+      display: none;
+    }
+  }
+
+  &--nowrap {
+    white-space: nowrap;
   }
 }
