--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,11 +1,28 @@
 .events {
-  box-sizing: border-box;
+  @include paddingInline;
+  @include gridPage;
+
+  &__title {
+    grid-column: 1 / -1;
+  }
 
   &__article {
     margin-bottom: 60px;
 
-    &:last-of-type {
-      margin-bottom: 27px;
+    @include onTablet {
+      margin-bottom: 64px;
+
+      &:nth-of-type(2) {
+        margin-bottom: 112px;
+      }
+    }
+
+    @include onDesktop {
+      margin-bottom: 104px;
+
+      &:nth-of-type(2) {
+        margin-bottom: 104px;
+      }
     }
   }
 }
