--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,17 +1,26 @@
 .footer {
+  margin-bottom: 60px;
   text-align: center;
-  padding-inline: 20px;
   font-size: 12px;
   font-weight: 300;
   line-height: 140.63%;
   color: $c-title;
 
-  &__designed {
-    margin-bottom: 10px;
+  @include paddingInline;
+
+  @include onTablet {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    margin-bottom: 36px;
   }
 
-  &__copyright {
-    margin-bottom: 60px;
+  &__designed {
+    margin-bottom: 10px;
+
+    @include onTablet {
+      margin-bottom: 0;
+    }
   }
 
 }
