--- a/src/styles/blocks/grafic.scss
+++ b/src/styles/blocks/grafic.scss
@@ -1,28 +1,42 @@
 .grafic {
-  line-height: 150%;
   font-size: 14px;
   font-weight: 400;
+  line-height: 150%;
+
+  &__title {
+    height: 20px;
+    line-height: 140.63%;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
+    }
+  }
 
   &__week {
     margin-bottom: 16px;
-  }
 
-  &__text {
-    line-height: 140.63%;
-    margin-bottom: 20px;
-  }
+    @include onTablet {
+      grid-row: 2 / 3;
+      grid-column: 1 / 2;
+    }
 
-  &__time {
-    display: inline;
-    font-weight: 600;
+    &--contacts {
+      margin-bottom: 32px;
+    }
   }
 
   &__kasa {
-    margin-bottom: 27px;
+    @include onTablet {
+      grid-row: 2 / 3;
+      grid-column: 2 / 3;
+    }
   }
 
-  &__weekend {
+  &__bold {
     display: inline;
     font-weight: 600;
   }
+
 }
