--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,37 +1,35 @@
 .header {
-  box-sizing: border-box;
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
 
-  &__top {
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 300px;
-    padding-top: 9px;
-    display: flex;
-    justify-content: center;
-    background-image: url(../images/images/national-museum.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  @include paddingInline;
+  @include gridPage;
 
   &__menu {
     background-image: url(../images/icons/menu.svg);
   }
 
-  &__bottom {
-    padding-inline: 20px;
+  &__logo {
+    width: 49px;
+    height: 55px;
+    grid-column: 1 / -1;
+    margin: auto;
+    margin-top: 9px;
+    padding: 5px 3px;
+
+    @include onTablet {
+      height: 62px;
+      margin-top: 15px;
+      grid-column: 4 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 6 / 8;
+    }
   }
 
-  &__title {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 45px;
-    font-weight: 700;
-    line-height: 100%;
+  &__img {
+    width: 100%;
   }
-
 }
