museum-landing hover efects complete

--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -68,8 +68,22 @@
     }
   }
   &__link {
+    display: block;
     font-size: 16px;
     font-weight: 500;
+
+    transition-duration: 300ms;
+
+    &::first-letter {
+      transition-duration: 300ms;
+    }
+
+    &:hover {
+      letter-spacing: 2px;
+      &::first-letter {
+        color: #F14A27;
+      }
+    }
   }
 
   &__work-time-block {
