--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -37,6 +37,39 @@
     gap: 20px;
   }
 
+  &__social-image {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+
+    transition-duration: 300ms;
+    &--hover-visible {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+    }
+  }
+
+  &__social-item {
+    position: relative;
+    &:hover {
+      .footer__social-image {
+        opacity: 0;
+      }
+      .footer__social-image--hover-visible {
+        opacity: 1;
+      }
+    }
+  }
+
   &__info-row {
     position: relative;
     margin-bottom: 40px;
@@ -129,6 +162,12 @@
     color: #0F0E08;
     font-size: 14px;
     font-weight: 400;
+
+    transition-duration: 300ms;
+
+    &:hover {
+      color: #F14A27;
+    }
   }
   &__up-link {
     display: block;
