museum landidng add

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$min-width: 320px;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+
+$max-content-width: 1440px;
+
+$base-white: #fff;
+$base-green: #1a5a4c;
+$black-text: #0f0e08;
+$grey-text: #4e4e4e;
+$grey-text-subtitle: #687480;
+$orange-square: #f14a27;
