--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/title";
+@import "blocks/icon";
+@import "blocks/square-with-arrow";
+@import "blocks/logo";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/schedule";
+@import "blocks/events";
+@import "blocks/subtitle-dates";
+@import "blocks/event";
+@import "blocks/lection";
+@import "blocks/galery";
+@import "blocks/slider";
+@import "blocks/subscription";
+@import "blocks/footer";
