--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,116 @@
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInline {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 34px;
+  }
+
+  @include onDesktop() {
+    padding-inline: 55px;
+  }
+}
+
+@mixin contentCenteredWithFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin pageGrid {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop() {
+    --columns: 12;
+  }
+}
+
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin appearOnScrollLeft {
+  animation: onScrollMoveLeft 1s ease-in;
+
+  @keyframes onScrollMoveLeft {
+    0% {
+      transform: translateX(-75%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+@mixin appearOnScrollRight {
+  animation: onScrollMoveRight 1s ease-in;
+
+  @keyframes onScrollMoveRight {
+    0% {
+      transform: translateX(75%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+@mixin appearOnScrollTop {
+  animation: onScrollMoveTop 1s ease-in;
+
+  @keyframes onScrollMoveTop {
+    0% {
+      transform: translateY(-75%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+}
+
+@mixin appearOnScrollBottom {
+  animation: onScrollMoveBottom 1s ease-in;
+
+  @keyframes onScrollMoveBottom {
+    0% {
+      transform: translateY(75%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
