NAMU landing page

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,59 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $pc-min-width) {
+    @content;
+  }
+}
+
+@mixin contentWidth() {
+  margin: 0 auto;
+  max-width: 320px;
+
+  @include onTablet {
+    max-width: $tablet-min-width;
+  }
+
+  @include onDesktop {
+    max-width: $pc-min-width;
+  }
+}
+
+@mixin contentPadding() {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @include onTablet {
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+
+  @include onDesktop {
+    padding-left: 55px;
+    padding-right: 55px;
+  }
+}
+
+@mixin pageGrid {
+  display: grid;
+  --columns: 2;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop() {
+    --columns: 12;
+  }
+}
