--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/button.scss";
+@import "blocks/icon.scss";
+@import "blocks/schedule.scss";
+@import "blocks/events.scss";
+@import "blocks/event.scss";
+@import "blocks/lection.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slides.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/footer.scss";
