fixed 1-st but not last

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -35,13 +35,18 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
 
+    & > a {
+      @include hover(scale, 1.1);
+    }
+
+
     @include onTablet {
       display: flex;
       gap: 32px;
     }
 
     @include onDesktop {
-       gap: 0;
+      gap: 0;
       justify-content: space-between;
     }
   }
