--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -11,8 +11,9 @@
   }
 
   &__logo {
-    width: 49px;
-    height: 55px;
+    display: flex;
+    width: auto;
+    height: 51px;
     grid-column: 1 / -1;
     margin: auto;
     margin-top: 9px;
