--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -30,6 +30,7 @@
     @include onDesktop {
       grid-column: 1 / 7;
       margin-right: -30px;
+      margin-bottom: 48px;
       font-size: 22px;
       font-weight: 500;
       line-height: 100%;
@@ -69,6 +70,10 @@
 
   &__item {
     margin-bottom: 24px;
+
+    @include onDesktop {
+      margin-bottom: 30px;
+    }
   }
 
   &__link {
