--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -21,8 +21,12 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
-    background-color: #fff;
+    transition: all 0.3s;
+    // background-color: #fff;
+  }
 
+  &:hover > .tickets__text {
+    scale: 1.2;
   }
 
   &__arrow {
@@ -32,7 +36,7 @@
     height: $form-size;
     background-color: $c-green;
 
-    &:hover > .tickets__image {
+    &:hover .tickets__image {
       scale: 1.5;
     }
 
