fixed some title

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -84,6 +84,7 @@
     width: 102px;
     height: 9px;
     background-image: url(../images/icons/slider.svg);
+    cursor: pointer;
 
     @include onDesktop {
       display: none;
