--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -71,8 +71,10 @@
     position: relative;
     color: $c-title;
     font-size: 28px;
+    font-weight: 400;
     line-height: 100%;
     margin-bottom: 10px;
+    text-decoration: none;
 
     &::after {
       content: "";
