--- a/src/styles/blocks/romantic.scss
+++ b/src/styles/blocks/romantic.scss
@@ -98,10 +98,12 @@
   }
 
   &__title {
+    text-align: center;
     color: $c-title;
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
+    text-decoration: none;
 
     @include onTablet {
       grid-column: 1 / -1;
