--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,10 +1,11 @@
 .menu {
+  width: 100%;
+  margin: auto;
   box-sizing: border-box;
-  background-color: $c-green;
   color: #fff;
   font-weight: 400;
-  z-index: 10;
 
+  @include maxWidth;
   @include paddingInline;
   @include gridPage;
 
