--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,12 @@
   }
 }
 
+@mixin maxWidth {
+  box-sizing: border-box;
+  max-width: 1280px;
+  margin: auto;
+}
+
 @mixin onTablet {
   @media (min-width: 768px) {
     @content;
