--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -17,7 +17,6 @@
     display: flex;
     justify-content: left;
     align-items: center;
-    padding-left: 24px;
     background-color: #fff;
   }
 
@@ -28,6 +27,8 @@
 
   &__input {
     width: 100%;
+    height: 100%;
+    padding-inline: 24px;
     border: none;
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
