--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,8 @@
 .page {
+  min-width: 320px;
+  margin: auto;
   box-sizing: border-box;
   position: relative;
-  min-width: 320px;
-  max-width: 1280px;
-  margin: auto;
   scroll-behavior: smooth;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
@@ -25,6 +24,8 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 10;
+    background-color: $c-green;
 
     transition: all 0.3s;
     transform: translateX(-100%);
@@ -92,6 +93,7 @@
   }
 
   &__main {
+    @include maxWidth;
     margin-bottom: 80px;
 
     @include onTablet {
