museum_second_edition

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,20 +1,13 @@
 .header {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
+  padding-top: 15px;
 
   @include smartphone {
-    display: block;
-    width: 100%;
-  }
-
-  @include desktop {
-    width: 100%;
+    padding-top: 9px;
   }
 
   &__museum {
     position: absolute;
+    z-index: -1;
     right: 0;
     top: 0;
     width: 48.7%;
@@ -37,35 +30,30 @@
   }
 
   &__top {
+    width: 80%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+
+    @include desktop {
+      width: 56.6%;
+      margin-bottom: 119px;
+    }
+
+    @include smartphone {
+      width: 58.4%;
+      margin-bottom: 0;
+    }
 
     &--menuLogo {
       display: block;
-      position: absolute;
-      left: 10%;
-      top: 45px;
-      width: 18px;
-      height: 12px;
-
-      @include smartphone {
-        left: 20px;
-        top: 27px;
-      }
-
-      @include desktop {
-        left: 4.4vw;
-        top: 40px;
-        width: 24px;
-        height: 24px;
-      }
+      width: 24px;
+      height: 24px;
     }
 
     &--logo {
       display: block;
-      position: absolute;
-      left: 52%;
-      top: 15px;
       width: 220px;
       height: 72px;
       font-family: "Montserrat", Arial, sans-serif;
@@ -74,19 +62,16 @@
       font-size: 36px;
       line-height: 100%;
       text-align: center;
+      text-decoration: none;
       color: #0f0e08;
 
       @include smartphone {
-        left: 41%;
-        top: 9px;
         width: 55px;
         height: 61px;
         font-size: 30px;
       }
 
       @include desktop {
-        left: 43%;
-        top: 15px;
         width: 170px;
         height: 72px;
         font-size: 36px;
@@ -103,20 +88,19 @@
     font-size: 54px;
     line-height: 120%;
     color: #000;
-    margin: 127px 0 38px 34px;
+    margin-bottom: 38px;
 
     @include smartphone {
-      margin: 320px auto 20px;
       width: 280px;
       text-align: center;
       font-size: 45px;
+      margin: 310px auto 20px;
     }
 
     @include desktop {
       width: 470px;
       font-size: 72px;
-      margin: 206px 0 90px;
-      margin-left: 4.3%;
+      margin-bottom: 90px;
     }
   }
 
@@ -125,11 +109,10 @@
     height: 70px;
     border: 1px solid #1a5a4c;
     margin-bottom: 107px;
-    margin-left: 34px;
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.05);
     }
 
     @include smartphone {
@@ -140,7 +123,7 @@
 
     @include desktop {
       margin-bottom: 50px;
-      margin-left: 20%;
+      margin-left: 15.6%;
     }
 
     &--button {
@@ -199,10 +182,12 @@
       display: block;
       position: relative;
       top: 50px;
-      font-family: "Montserrat", Arial, sans-serif;
+      color: #687480;
+      font-family: "IBM Plex Sans", Arial, sans-serif;
+      font-size: 14px;
       font-style: normal;
-      font-weight: 400;
-      font-size: 32px;
+      font-weight: 700;
+      line-height: 100%;
       transform: rotate(270deg);
     }
   }
