--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,11 @@
 @import "utils";
 @import "./blocks/page.scss";
+@import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/footer.scss";
 @import "./utils/mixins";
 @import "./sections/menu.scss";
+@import "./blocks/containerMenu.scss";
 @import "./blocks/menuTop.scss";
 @import "./blocks/menuBottom.scss";
 @import "./sections/actualEvents.scss";
