--- a/src/styles/sections/galery.scss
+++ b/src/styles/sections/galery.scss
@@ -31,6 +31,11 @@
       height: 600px;
       box-sizing: border-box;
       background-image: url(./pictures/galery1.jpg);
+      transition: all 0.3s;
+      
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
     &--picture2 {
@@ -40,6 +45,11 @@
       height: 600px;
       box-sizing: border-box;
       background-image: url(./pictures/galery2.jpg);
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
     &--picture3 {
@@ -49,6 +59,11 @@
       height: 360px;
       box-sizing: border-box;
       background-image: url(./pictures/galery3.jpg);
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
     &--picture4 {
@@ -58,6 +73,11 @@
       height: 360px;
       box-sizing: border-box;
       background-image: url(./pictures/galery4.jpg);
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 }
