--- a/src/styles/sections/subscribe.scss
+++ b/src/styles/sections/subscribe.scss
@@ -10,6 +10,10 @@
     padding: 88px 20px;
   }
 
+  @include desktop {
+    padding: 163px 355px;
+  }
+
   &__title {
     font-family: "Montserrat", Arial, sans-serif;
     font-style: normal;
@@ -78,7 +82,7 @@
       transition: all 0.3s;
 
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.05);
       }
 
       @include smartphone {
