--- a/src/styles/blocks/menuTop.scss
+++ b/src/styles/blocks/menuTop.scss
@@ -1,19 +1,20 @@
 .menuTop {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  height: 225px;
-  background: #1a5a4c;
-  opacity: 1;
+  padding: 40px 34px;
 
   @include desktop {
     justify-content: space-between;
     height: 233px;
+    max-width: 1170px;
+    padding: 40px 55px 48px;
+    margin: 0 auto;
   }
 
   @include smartphone {
     display: block;
     height: 400px;
+    padding: 0 20px;
   }
 
   &__introduce {
@@ -22,8 +23,6 @@
     height: 96px;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 40px;
-    margin-left: 4.4vw;
 
     @include desktop {
       width: 500px;
@@ -37,11 +36,12 @@
     }
 
     &--logo {
-      width: 12px;
-      height: 12px;
+      width: 24px;
+      height: 24px;
       background-image: url(./pictures/crest.svg);
+      background-position: center;
+      background-repeat: no-repeat;
       color: #fff;
-      margin-left: 40px;
       transition: all 0.3s;
 
       &:hover {
@@ -53,18 +53,18 @@
       }
 
       @include smartphone {
-        margin: 27px 0 0 20px;
+        margin-top: 27px;
       }
     }
 
     &--link1 {
       width: 100px;
-      margin-left: 40px;
+      margin-left: 38px;
       @include link;
 
       @include desktop {
-        width: 168px;
-        margin-left: 110px;
+        width: 85px;
+        margin-left: 102px;
         margin-bottom: 30px;
       }
       
@@ -81,6 +81,7 @@
 
       @include desktop {
         width: 168px;
+        margin-left: 115px;
         margin-bottom: 30px;
       }
 
@@ -93,7 +94,7 @@
     &--link3 {
       display: inline-block;
       width: 100px;
-      margin-left: 96px;
+      margin-left: 62px;
       @include link;
 
       @include desktop {
@@ -104,17 +105,19 @@
 
       @include smartphone {
         width: 100px;
-        margin-left: 70px;
+        margin-left: 60px;
       }
     }
 
     &--link4 {
       display: inline-block;
       width: 100px;
+      margin-left: 20px;
       @include link;
 
       @include desktop {
         width: 168px;
+        margin-left: 31px;
       }
 
       @include smartphone {
@@ -129,18 +132,16 @@
     position: absolute;
     width: 1px;
     height: 145px;
-    margin-left: 46vw;
+    margin-left: 39vw;
     background: rgba(255, 255, 255, 0.5);
 
     @include desktop {
-      position: absolute;
-      margin-top: 40px;
-      margin-left: 51vw;
+      margin-left: 590px;
     }
 
     @include smartphone {
       position: unset;
-      width: 280px;
+      width: 87.5vw;
       height: 1px;
       margin: 0 auto 20px;
     }
@@ -150,18 +151,15 @@
     display: flex;
     height: 145px;
     width: 340px;
-    margin-right: 4.5vw;
   
     @include desktop {
-      margin-top: 40px;
-      margin-right: 12vw;
+      margin-right: 100px;
     }
 
     @include smartphone {
       display: block;
       width: 280px;
       height: 230px;
-      margin: 0 auto;
     }
 
     &--list {
