--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,10 @@
 
   &__body {
     background: $c-gray;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__menu {
@@ -18,5 +22,7 @@
     &:target {
       transform: translateX(0);
     }
+
+    
   }
 }
