--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -7,7 +7,7 @@
   }
 
   @include smartphone {
-    margin: 0;
+    margin: 0 10px;
   }
 
   &__title {
@@ -18,11 +18,12 @@
     line-height: 100%;
     color: #0f0e08;
     margin-left: 17px;
-    margin-bottom: 30px;
+    margin-bottom: 48px;
 
     @include smartphone {
       text-align: center;
-      margin-left: 20px;
+      margin-left: 0;
+      margin-bottom: 40px;
     }
   }
 
@@ -55,7 +56,10 @@
         height: 410px;
         background-image: url(./pictures/galery1_320.jpg);
         background-repeat: no-repeat;
-        margin: 0 auto;
+        background-position: center;
+        box-sizing: border-box;
+        background-size: cover;
+        margin: 0 10px;
       }
     }
 
@@ -72,7 +76,7 @@
         width: 87.5%;
         height: 410px;
         background-repeat: no-repeat;
-        margin: 0 auto;
+        margin: 0 10px;
       }
     }
 
@@ -89,7 +93,7 @@
       @include smartphone {
         width: 87.5%;
         height: 410px;
-        margin: 0 auto;
+        margin: 0 10px;
       }
     }
 
@@ -106,7 +110,7 @@
         width: 87.5%;
         height: 410px;
         background-repeat: no-repeat;
-        margin: 0 auto;
+        margin: 0 10px;
       }
     }
 
