--- a/src/styles/sections/lecture.scss
+++ b/src/styles/sections/lecture.scss
@@ -2,17 +2,15 @@
 
   &__picture {
     display: block;
-    width: 700px;
+    width: 100%;
     height: 390px;
     margin: 0 auto;
 
     @include smartphone {
-      width: 100vw;
       height: 65vw;
     }
 
     @include desktop {
-      width: 100vw;
       height: 43vw;
     }
   }
