add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixins";
+@import "./utils/vars";
 
-body {
-  background: $c-gray;
-}
+@import "../blocks/page";
+@import "../blocks/conteiner";
+@import "../blocks/header";
+@import "../blocks/top-bar";
+@import "../blocks/page__menu-bar";
+@import "../blocks/nav";
+@import "../blocks/main";
+@import "../blocks/section";
+@import "../blocks/lecture";
+@import "../blocks/gallery";
+@import "../blocks/navigation";
+@import "../blocks/subscription";
+@import "../blocks/footer";
