--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-width: 1280px;
+$design-min-width: 1440px;
+
+$main-text-color: #0f0e08;
+$secondary-text-color: #fff;
+$bg-border-color: #1a5a4c;
+$secondary-line-height: 100%;
+$secondary-font-family: "Montserrat", sans-serif;
