--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,25 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/body";
+@import "blocks/header";
+@import "blocks/grid-container";
+@import "blocks/container";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/art-museum";
+@import "blocks/title";
+@import "blocks/button";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/shedule";
+
+@import "blocks/main";
+@import "blocks/events";
+@import "blocks/card";
+@import "blocks/classicizm";
+@import "blocks/substcription";
+@import "blocks/footer";
+@import "blocks/contacts";
+@import "blocks/designers";
+@import "blocks/slider";
