--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,3 @@
-$c-gray: #eee;
+$background-page-color: #fff;
+$first-font-family: "IBM Plex Sans", sans-serif;
+$second-font-family: "Montserrat", sans-serif;
