--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,6 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%title {
+  text-align: center;
+  font-family: $second-font-family;
+  font-weight: 700;
+  line-height: 100%;
 }
