add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,20 +1,23 @@
 .header {
+  padding: 9px;
 
   &__bc {
     position: absolute;
-    left: 0;
+    width: 100%;
     right: 0;
+    left: 0;
     top: 0;
     height: 300px;
-    background-image: url("../images/header__bc/Natsionalnij-muzej.png");
+    background-image: url("../images/header__bc/Natsionalnij-muzej-bc.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left bottom;
     z-index: -1;
 
     @include onTablet {
-      height: 384px;
+      width: auto;
       left: 50%;
+      height: 384px;
     }
 
     @include onDesktop {
@@ -22,38 +25,7 @@
     }
   }
 
-  &__container {
+  &__grid-container {
     position: relative;
-  }
-
-  &__events-link {
-    display: none;
-
-    @include onDesktop {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    text-decoration: none;
-    position: absolute;
-    left: 20px;
-    bottom: -60px;
-    color: #687480;
-    font-family: $first-font-family;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 100%;
-
-    transform: rotate(-90deg);
-
-    &::before {
-
-      display: inline-block;
-      content: "";
-      height: 1px;
-      width: 70px;
-      background-color: #687480;
-    }
   }
 }
