--- a/src/styles/blocks/substcription.scss
+++ b/src/styles/blocks/substcription.scss
@@ -50,7 +50,7 @@
   }
 
   &__input-email {
-    width: 100%;
+    width: 230px;
     height: 50px;
     padding-left: 24px;
     border: none;
@@ -63,12 +63,11 @@
     line-height: 100%;
 
     @include onTablet {
-      max-width: 374px;
       height: 70px;
     }
 
     @include onDesktop {
-      max-width: 470px;
+      width: 470px;
     }
   }
 }
