--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,36 @@
 @import "blocks/contacts";
 @import "blocks/designers";
 @import "blocks/slider";
+
+
+.event {
+  position: absolute;
+  bottom: -50px;
+  left: -50px;
+  transform: rotate(-90deg);
+
+  &__link {
+    display: none;
+
+    text-decoration: none;
+    color: #687480;
+    font-family: $first-font-family;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 100%;
+
+    @include onDesktop {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    &::before {
+      display: inline;
+      content: "";
+      height: 1px;
+      width: 70px;
+      background-color: #687480;
+    }
+  }
+}
