--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -2,4 +2,12 @@
   $background-page-color: #fff;
   padding: 0;
   margin: 0;
+
+  &__header {
+    position: relative;
+  }
+
+  &__main {
+    position: relative;
+  }
 }
