--- a/src/styles/blocks/grid-container.scss
+++ b/src/styles/blocks/grid-container.scss
@@ -1,24 +1,19 @@
 .grid-container {
   @include pageGrid;
 
-  &--header {
+  &__icon-menu {
     padding-top: 27px;
-    align-items: center;
-
-    @include onTablet {
-      padding-top: 15px;
-    }
+    align-self: center;
+    grid-column: 1 / 2;
   }
 
-  &--logo {
+  &__header-logo {
     position: absolute;
-    top: 9px;
-    grid-column: 1 / 3;
     justify-self: center;
+    grid-column: 1 / -1;
 
     @include onTablet {
       position: static;
-      justify-self: center;
       grid-column: 4 / 6;
     }
 
