add task solution

--- a/src/blocks/_footer.scss
+++ b/src/blocks/_footer.scss
@@ -33,6 +33,8 @@
         font-family: $secondary-font-family;
         height: 100%;
         font-weight: 700;
+
+        @include hover(scale, 1.1);
       }
     }
 
@@ -50,6 +52,8 @@
       &-link {
         height: 100%;
         width: 100%;
+
+        @include hover(scale, 1.2);
       }
     }
   }
@@ -117,6 +121,11 @@
       right: 0;
       top: 0;
 
+      &:hover {
+        box-shadow: rgba(50, 50, 93, 0.25) 0 30px 60px -12px inset,
+          rgba(0, 0, 0, 0.3) 0 18px 36px -18px inset;
+      }
+
       @include onTablet {
         display: none;
       }
@@ -171,6 +180,8 @@
       font-style: normal;
       font-weight: 400;
       line-height: $secondary-line-height;
+
+      @include hover (font-weight, 700);
     }
   }
 
