--- a/src/blocks/_page__menu-bar.scss
+++ b/src/blocks/_page__menu-bar.scss
@@ -43,6 +43,8 @@
       height: 24px;
       background-image: url(../images/icon-close.svg);
       display: block;
+
+      @include hover(scale, 1.2);
     }
   }
 
@@ -103,7 +105,18 @@
     }
 
     &-text {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
       font-weight: 400;
+
+      &__link {
+        display: block;
+        text-decoration: none;
+        color: $main-text-color;
+
+        @include hover(color, red);
+      }
     }
   }
 }
