--- a/src/blocks/_subscription.scss
+++ b/src/blocks/_subscription.scss
@@ -81,9 +81,15 @@
       font-style: normal;
       font-weight: 400;
       line-height: $secondary-line-height;
+      outline: none;
+      box-shadow: inset 0 0 0 50px rgb(195, 167, 218);
 
       @include onTablet {
         height: 70px;
+      }
+
+      &:hover {
+        box-shadow: inset 0 0 0 50px rgb(116, 180, 121);
       }
     }
 
@@ -98,6 +104,8 @@
         width: 70px;
         height: 70px;
       }
+
+      @include hover(scale, 1.1);
 
       &-img {
         display: block;
