--- a/src/blocks/_top-bar.scss
+++ b/src/blocks/_top-bar.scss
@@ -19,6 +19,8 @@
       width: 24px;
       height: 24px;
       color: $main-text-color;
+
+      @include hover(scale, 1.2);
     }
   }
 
@@ -54,6 +56,8 @@
       font-style: normal;
       font-weight: 700;
       line-height: $secondary-line-height;
+
+      @include hover(scale, 1.2);
 
       @include onTablet {
         height: 72px;
