--- a/src/blocks/_header.scss
+++ b/src/blocks/_header.scss
@@ -121,6 +121,14 @@
         width: 70px;
         height: 70px;
       }
+
+      &:hover {
+        box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px,
+          rgba(0, 0, 0, 0.12) 0 -12px 30px,
+          rgba(0, 0, 0, 0.12) 0 4px 6px,
+          rgba(0, 0, 0, 0.17) 0 12px 13px,
+          rgba(0, 0, 0, 0.09) 0 -3px 5px;
+      }
     }
 
     &-description {
