--- a/src/styles/sections/bottomList.scss
+++ b/src/styles/sections/bottomList.scss
@@ -21,6 +21,7 @@
   }
 
   &__links {
+
     
     @include smartphone {
       grid-column: 1 / 3;
@@ -31,8 +32,10 @@
     }
 
     &--logo {
-      width: 98px;
+      display: block;
+      width: 90px;
       height: 72px;
+      justify-self: center;
       font-family: "Montserrat", Arial, sans-serif;
       font-style: normal;
       text-decoration: none;
