--- a/src/styles/sections/actualEvents.scss
+++ b/src/styles/sections/actualEvents.scss
@@ -69,7 +69,7 @@
     margin-bottom: 32px;
 
     @include smartphone {
-      width: 280px;
+      width: 100%;
       height: 16px;
       margin: 0 auto 10px;
     }
@@ -90,7 +90,7 @@
       color: #687480;
 
       @include smartphone {
-        width: 130px;
+        width: 100%;
       }
     }
 
@@ -106,8 +106,8 @@
       margin-bottom: 30px;
 
       @include smartphone {
-        width: 142px;
-        margin: 0 0 10px 50px;
+        width: 100%;
+        margin: 0 0 20px 50px;
       }
     }
   }
@@ -139,10 +139,8 @@
     }
 
     @include smartphone {
-      width: 280px;
+      width: 100%;
       font-size: 28px;
-      text-align: center;
-      margin: 0 auto 10px;
     }
 
     @include desktop {
@@ -157,7 +155,7 @@
     margin-bottom: 64px;
 
     @include smartphone {
-      width: 280px;
+      width: 100%;
       margin: 0 auto 60px;
     }
 
@@ -178,7 +176,7 @@
       margin-bottom: 64px;
 
       @include smartphone {
-        width: 280px;
+        width: 100%;
         margin: 0 auto 60px;
       }
 
