--- a/src/styles/sections/subscribe.scss
+++ b/src/styles/sections/subscribe.scss
@@ -48,7 +48,7 @@
 
     &--form {
       padding: 0;
-      border: 0;
+      border: none;
       width: 374px;
       height: 70px;
       text-indent: 24px;
@@ -57,6 +57,8 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
+      background: #fff;
+      outline: none;
       color: #687480;
       
       @include smartphone {
