add task solution

--- a/src/blocks/_nav.scss
+++ b/src/blocks/_nav.scss
@@ -29,9 +29,11 @@
     font-weight: 500;
     line-height: $secondary-line-height;
     text-decoration: none;
+    width: 100px;
 
     @include onDesktop {
       font-size: 22px;
+      width: 168px;
     }
 
     @include hover(color, red);
