--- a/src/blocks/_header.scss
+++ b/src/blocks/_header.scss
@@ -98,6 +98,15 @@
     width: 100%;
     height: 50px;
     border: 1px solid $bg-border-color;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px,
+        rgba(0, 0, 0, 0.12) 0 -12px 30px,
+        rgba(0, 0, 0, 0.12) 0 4px 6px,
+        rgba(0, 0, 0, 0.17) 0 12px 13px,
+        rgba(0, 0, 0, 0.09) 0 -3px 5px;
+    }
 
     grid-column: 1 / -1;
 
@@ -120,14 +129,6 @@
       @include onTablet {
         width: 70px;
         height: 70px;
-      }
-
-      &:hover {
-        box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px,
-          rgba(0, 0, 0, 0.12) 0 -12px 30px,
-          rgba(0, 0, 0, 0.12) 0 4px 6px,
-          rgba(0, 0, 0, 0.17) 0 12px 13px,
-          rgba(0, 0, 0, 0.09) 0 -3px 5px;
       }
     }
 
