--- a/src/blocks/_subscription.scss
+++ b/src/blocks/_subscription.scss
@@ -82,14 +82,14 @@
       font-weight: 400;
       line-height: $secondary-line-height;
       outline: none;
-      box-shadow: inset 0 0 0 50px rgb(195, 167, 218);
 
       @include onTablet {
         height: 70px;
       }
 
-      &:hover {
-        box-shadow: inset 0 0 0 50px rgb(116, 180, 121);
+      &:hover,
+      &:focus {
+        box-shadow: inset 0 0 0 50px rgb(161, 192, 163);
       }
     }
 
