--- a/src/blocks/_top-bar.scss
+++ b/src/blocks/_top-bar.scss
@@ -35,18 +35,18 @@
     text-align: center;
 
     @include onTablet {
-      position: relative;
+      position: absolute;
       height: 72px;
       transform: none;
       margin: 0;
       width: 220px;
-      top: 0;
-      grid-column: 4 / 6;
+      top: 15px;
+      left: 0;
+
     }
 
     @include onDesktop {
       width: 170px;
-      grid-column: 6 / 8;
     }
 
     &-link {
@@ -63,7 +63,6 @@
         height: 72px;
         font-size: 36px;
       }
-
     }
   }
 }
