add task solution

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -13,6 +13,8 @@
   &__img {
     margin-bottom: 20px;
 
+    @include hover(transform, scale(1.1));
+
     @include onTablet {
       margin-bottom: 44px;
     }
