--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -11,7 +11,7 @@
     background-image: url("../images/header__bc/Natsionalnij-muzej-bc.png");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: left bottom;
+    background-position: center top;
     z-index: -1;
 
     @include onTablet {
