--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -7,6 +7,8 @@
   background-position: center;
   background-size: contain;
 
+  @include hover(transform, (scale(1.1)));
+
   &--menu {
     background-image: url("../images/icon/icon-menu.svg");
   }
@@ -16,6 +18,7 @@
   }
 
   &--facebook {
+
     background-image: url("../images/icon/icon-facebook.svg");
   }
 
