--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -72,6 +72,12 @@
       background-color: #1a5a4c;
       transform: scale(1.1);
     }
+
+    @include onTablet {
+      &--tablet-display-none {
+        display: none;
+      }
+    }
   }
 
   &__slides {
@@ -107,6 +113,7 @@
 input[name="r"] {
   position: absolute;
   visibility: hidden;
+
 }
 
 #r1:checked ~ .s1 {
