--- a/src/styles/blocks/substcription.scss
+++ b/src/styles/blocks/substcription.scss
@@ -1,7 +1,7 @@
 .subscription {
   padding-block: 88px;
   height: 386px;
-  background-image: url("../images/subscription/Rectangle\ 22.3.png");
+  background-image: url("../images/subscription/subscription.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -63,6 +63,7 @@
     line-height: 100%;
 
     @include onTablet {
+      width: 374px;
       height: 70px;
     }
 
