add task solution

--- a/src/blocks/_nav.scss
+++ b/src/blocks/_nav.scss
@@ -20,6 +20,10 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    
+    @include onDesktop {
+      width: 168px;
+    }
   }
 
   &__link {
@@ -29,11 +33,9 @@
     font-weight: 500;
     line-height: $secondary-line-height;
     text-decoration: none;
-    width: 100px;
 
     @include onDesktop {
       font-size: 22px;
-      width: 168px;
     }
 
     @include hover(color, red);
