--- a/src/blocks/_subscription.scss
+++ b/src/blocks/_subscription.scss
@@ -63,15 +63,19 @@
   &__form {
     display: flex;
     height: 50px;
+    justify-content: center;
 
     @include onTablet {
       gap: 16px;
       height: 70px;
     }
 
+    @include onDesktop {
+      gap: 30px;
+    }
+
     &__email {
       height: 50px;
-      flex-grow: 1;
       padding: 0;
       border: none;
       padding-left: 24px;
@@ -82,9 +86,15 @@
       font-weight: 400;
       line-height: $secondary-line-height;
       outline: none;
+      box-sizing: border-box;
 
       @include onTablet {
         height: 70px;
+        width: 374px;
+      }
+
+      @include onDesktop {
+        width: 470px;
       }
 
       &:hover,
