--- a/src/blocks/_header.scss
+++ b/src/blocks/_header.scss
@@ -99,6 +99,7 @@
     height: 50px;
     border: 1px solid $bg-border-color;
     cursor: pointer;
+    transition: box-shadow 1s;
 
     &:hover {
       box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px,
