add task solution

--- a/src/blocks/_page__menu-bar.scss
+++ b/src/blocks/_page__menu-bar.scss
@@ -87,6 +87,13 @@
       margin: 0;
       padding: 0;
 
+      @include onTablet {
+        width: 158px;
+      }
+
+      @include onDesktop {
+        width: 170px;
+      }
     }
 
     &__link {
@@ -102,6 +109,10 @@
 
       @include onTablet {
         width: 144px;
+      }
+
+      @include onDesktop {
+        width: 170px;
       }
     }
 
