--- a/src/blocks/_subscription.scss
+++ b/src/blocks/_subscription.scss
@@ -88,6 +88,15 @@
       outline: none;
       box-sizing: border-box;
 
+      &:-webkit-autofill {
+        box-shadow: inset 0 0 0 50px rgb(189, 241, 184) !important;
+      }
+
+      &:hover,
+      &:focus {
+        box-shadow: inset 0 0 0 10px rgb(205, 240, 202);
+      }
+
       @include onTablet {
         height: 70px;
         width: 374px;
@@ -95,11 +104,6 @@
 
       @include onDesktop {
         width: 470px;
-      }
-
-      &:hover,
-      &:focus {
-        box-shadow: inset 0 0 0 50px rgb(161, 192, 163);
       }
     }
 
