--- a/src/styles/blocks/romantic.scss
+++ b/src/styles/blocks/romantic.scss
@@ -1,8 +1,10 @@
 .romantic {
+  overflow: hidden;
   @include paddingInline;
   @include gridPage;
 
   &__image {
+    width: auto;
     height: 210px;
     margin-inline: -20px;
     grid-column: 1 / -1;
