--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$effectDuration: 0.3s;
+
+$titleColor: #0f0e08;
+$textColor: #4e4e4e;
+$labelColor: #687480;
+$greenColor: #1a5a4c;
+$redColor: #f14a27;
