--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,12 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/common";
+
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/current-events";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/footer";
