--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,5 @@
-@import "utils/vars";
-@import "utils/mixins";
-@import "utils/extends";
+@import "../styles/utils/variables";
+@import "../styles/utils/mixins";
+@import "../styles/utils/placeholders";
+@import "../styles/utils/extends";
+@import "../styles/utils/reset";
