--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icons.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/romantism.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
