--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,16 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$main-font: "Montserrat", sans-serif;
+$second-font: "IBM Plex Sans", sans-serif;
+$font-size: 16px;
+
+$white-color: #fff;
+$light-grey-color: #e0e0e0;
+$second-grey-color: #c4c4c4;
+$grey-color: #687480;
+$color-for-describtion: #4e4e4e;
+$main-green: #1a5a4c;
+$dark-color: #0f0e08;
+$background-aside: #18181a;
+$black-color: #000;
+$main-red: #f14a27;
