--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,55 @@
-h1 {
-  @extend %h1;
+.section__title {
+  color: $dark-color;
+  text-align: center;
+  font-family: $main-font;
+  font-size: 36px;
+  font-weight: 700;
+  @include paddingInline;
+
+  &--white {
+    color: $white-color;
+    margin: 0;
+  }
+
+  @include onTablet {
+    font-size: 3.38rem;
+  }
+}
+
+.section__subtitle {
+  color: $dark-color;
+  font-family: $main-font;
+  font-size: 1.75rem;
+  font-weight: 400;
+  position: relative;
+  padding-block: 10px;
+  margin: 0;
+  display: inline-block;
+
+  @include onTablet {
+    font-size: 2.25rem;
+  }
+
+  &::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: $main-red;
+    position: absolute;
+    right: -20px;
+    top: 45%;
+  }
+
+  &--romantism {
+    text-align: center;
+    margin: 0;
+
+    &::after {
+      display: none;
+    }
+
+    @include onTablet {
+      text-align: left;
+    }
+  }
 }
