--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,9 +1,9 @@
 .menu {
   margin: 0 auto;
-  max-width: 1280px;
+  // max-width: 1280px;
   box-sizing: border-box;
 
-  height: 100vh;
+  height: 150vh;
   overflow: auto;
   z-index: 3;
   background-color: rgba(24, 24, 26, 0.5);
@@ -14,6 +14,8 @@
   &__wrapper {
     position: relative;
     box-sizing: border-box;
+
+    max-width: 1280px;
     @include contentPaddingInline;
     @include paddingTop;
     background-color: $greenColor;
